footer und formatierung

--- a/src/home.html
+++ b/src/home.html
@@ -8,14 +8,11 @@
          <link rel="stylesheet" href="css/bootstrap.min.css">
          <script src="js/jquery-1.10.2.js"></script>
          <script src="js/jquery-3.3.1.slim.min.js"></script>
-
          <script src="javascript.js"></script>
          <script src="js/bootstrap.min.js"></script>
 
          <!--Stylesheet-->
-
          <link rel="stylesheet" href="css/style.css" />
-
          <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
 
     </head>
@@ -27,43 +24,45 @@
         <!--Navbar-->
         <section id="navbar">
 
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-              <a class="navbar-brand" href="#">
-                <img src="Bilder/logo.jpg" id="logo" alt="ziege" />
-              </a>
+              <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <a class="navbar-brand" href="#">
+                        <img src="Bilder/logo.jpg" id="logo" alt="ziege" />
+                    </a>
 
-              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
 
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                  <li class="nav-item active">
-                    <a class="nav-link" href="home.html">Home <span class="sr-only">(current)</span></a>
-                  </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="galerie.html">Galerie</a>
-                    </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="formular.html">Kontakt</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="Impressum.html">Impressum</a>
-                  </li>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                          <ul class="navbar-nav mr-auto">
+                              <li class="nav-item active">
+                                  <a class="nav-link" href="home.html">Home <span class="sr-only">(current)</span></a>
+                              </li>
+                              <li class="nav-item">
+                                  <a class="nav-link" href="galerie.html">Galerie</a>
+                              </li>
+                              <li class="nav-item">
+                                  <a class="nav-link" href="formular.html">Kontakt</a>
+                              </li>
+                              <li class="nav-item">
+                                  <a class="nav-link" href="Impressum.html">Impressum</a>
+                              </li>
 
-                </ul>
+                          </ul>
 
-              </div>
-            </nav>
-          </section>
+                  </div>
+          </nav>
+      </section>
     </header>
 
     <main>
 
       <div class="außenrum container">
-        <!--Spalte1-->
+
         <div class="row">
+
           <div class="col-md-10">
+
             <!--Karussel-->
 
             <section id="carousel" class="carousel slide" data-ride="carousel">
@@ -102,83 +101,81 @@
 
                   <section class="team container">
 
-                  <div class="row">
-                      <div class="col-md-6">
-                          <h3>Unser Tierheim-Team</h3>
-                        </hr>
-                          <p>
-                          Wir sind stolz auf eine so tolle Mitarbeiter-Schar und wissen, dass jeder einzelne seine Arbeit liebt und egal wann oder egal um wieviel Uhr ein Notfall ansteht, immer zur Stelle ist und sich gegenseitig geholfen wird! Das ist nicht selbstverständlich und dafür sind wir sehr dankbar! Ein funktionierendes Team ist die Basis für jedes Tierheim!
-                          </p>
-                      </div>
-                      <div class="col-md-6 ">
-                          <img class="d-block w-100" src="Bilder/Team.jpg" alt="Unser Team" />
-                      </div>
+                      <div class="row">
 
-                  </div>
-                </section>
+                        <div class="col-md-6">
+                            <h3>Unser Tierheim-Team</h3>
+                            </hr>
+                            <p>
+                              Wir sind stolz auf eine so tolle Mitarbeiter-Schar und wissen, dass jeder einzelne seine Arbeit liebt und egal wann oder egal um wieviel Uhr ein Notfall ansteht, immer zur Stelle ist und sich gegenseitig geholfen wird! Das ist nicht selbstverständlich und dafür sind wir sehr dankbar! Ein funktionierendes Team ist die Basis für jedes Tierheim!
+                            </p>
+                        </div>
+
+                        <div class="col-md-6 ">
+                          <img class="d-block w-100" src="Bilder/Team.jpg" alt="Unser Team" />
+                        </div>
+
+                    </div>
+                  </section>
 
                 <!--Einzelvorstellung-->
 
 
-</div>
+            </div> <!--close class= col-md-10-->
 
-            <!--Spalte2 sidebar-->
+
+
+            <!--sidebar-->
           <div class="sidebar col-md-2">
 
-            <div class="spendentext">
+                <div class="spendentext">
+                  Unsere Tiere brauchen dich!</br>
+                </div>
 
-              Unsere Tiere brauchen dich!</br>
+                <h4> </br> Spende via  Paypal und direkt an unsere Tiere!</h4>
 
-            </div>
-            <h4> </br> Spende via  Paypal und direkt an unsere Tiere!</h4>
-
-            <a href="https://www.paypal.com/de/home">
-            <img id="paypal" src="Bilder/logo_paypal.jpg" alt="paypal" />
-          </a>
-          </br>
-          </br>
-
-
-          <div class="jobtext">
-
-          </br>
-            Du hast Interesse an einem Job oder einer Ausbildung? </br>
-            Wir freuen uns über deine Online-Bewerbung an <u>tierheim.bios@web.de</u>
-          </br>
-        </br>
-          </div>
-
-          <div class="facebook">
+                  <a href="https://www.paypal.com/de/home">
+                      <img id="paypal" src="Bilder/logo_paypal.jpg" alt="paypal" />
+                  </a>
+                  </br>
+                  </br>
 
 
-					         <div class="Facebook">
+                  <div class="jobtext">
 
-						                   <div class="fb-text">
-							                        Folge uns auch auf Facebook, damit du keine News verpasst!
-                                    </br>
-						                   </div>
+                    </br>
+                      Du hast Interesse an einem Job oder einer Ausbildung? </br>
+                      Wir freuen uns über deine Online-Bewerbung an <u>tierheim.bios@web.de</u>
+                    </br>
+                    </br>
+                  </div>
 
-						                    <a href="https://de-de.facebook.com">
-                                <img id="facebook" src="Bilder/Facebook.png" alt="Facebook-Link"/>
+                  <div class="facebook">
 
-                                </a>
+						            <div class="fb-text">
+							               Folge uns auch auf Facebook, damit du keine News verpasst!
+                              </br>
+						            </div>
 
-					              </div>
+						             <a href="https://de-de.facebook.com">
+                            <img id="facebook" src="Bilder/Facebook.png" alt="Facebook-Link" />
+                          </a>
+
+					         </div>
 
           </div>
 
-          </div>
 
-          <!--Galerie Zeile 2-->
+
+          <!--Galerie-->
           <div class="row">
             <div class="container-team col-md-12">
                   <div class="row" id="Einzelvorstellung">
                     Wir stellen uns vor:
-
-                      </div>
-                      <div class="row">
+                  </div>
 
 
+                  <div class="row">
 
                       <div id="myBtnContainer">
                         <button class="btn active" onclick="filterSelection('all')"> Alle</button>
@@ -188,30 +185,33 @@
                         <button class="btn" onclick="filterSelection('Verwaltung')"> Verwaltung</button>
                         <button class="btn" onclick="filterSelection('Aushilfe')"> Aushilfen</button>
                       </div>
+
                   </div>
 
-<!-- Portfolio Gallery Grid -->
+
                     <div class="Menschen row">
+
+                      <!--Leiter-->
                       <div class="column Leiter">
                         <div class="content">
                           <img src="Bilder/Leiterin.jpg" alt="Leiterin1" style="height:10em; width: 7em;">
                           <hr/>
                          <h4>Maxine Musterfrau</h4>
-                         <p>Unsere Tierheimleitung. </p>
+                         <p>Unsere Tierheimleitung mit Herz und Seele. </p>
                        </div>
                      </div>
 
 
                      <div class="column Leiter">
-                   <div class="content">
-                     <img src="Bilder/Leiterin2.jpg" alt="Leiterin2" style="height:10em; width: 7em;">
-                     <hr/>
-                     <h4>Carla Columna</h4>
-                      <p>Wenn unsere Maxine mal nicht vor Ort sein sollte oder Unterstützung benötigt ist Carla stehts zur stelle.</p>
-                   </div>
-                 </div>
+                       <div class="content">
+                         <img src="Bilder/Leiterin2.jpg" alt="Leiterin2" style="height:10em; width: 7em;">
+                          <hr/>
+                         <h4>Carla Columna</h4>
+                         <p>Wenn unsere Maxine mal nicht vor Ort sein sollte oder Unterstützung benötigt ist Carla stehts zur stelle.</p>
+                       </div>
+                     </div>
 
-
+                     <!--Mitarbeiter-->
                  <div class="column Mitarbeiter">
                    <div class="content">
                      <img src="Bilder/Mitarbeiter.jpg" alt="Mitarbeter1" style="height:10em; width: 7em;">
@@ -241,7 +241,7 @@
 
 
 
-
+                      <!--Azubi-->
                     <div class="column Azubi">
                       <div class="content">
                         <img src="Bilder/Azubi.jpg" alt="Azubi1" style="height: 10em; width: 7em;">
@@ -260,7 +260,7 @@
                       </div>
                     </div>
 
-
+                      <!--Verwaltung-->
                     <div class="column Verwaltung">
                       <div class="content">
                         <img src="Bilder/Verwaltung.jpg" alt="Verwaltung1" style="height: 10em; width: 7em;">
@@ -279,7 +279,7 @@
                       </div>
                     </div>
 
-
+                      <!--Aushilfen-->
                     <div class="column Aushilfe">
                       <div class="content">
                         <img src="Bilder/Aushilfe.png" alt="Aushilfe" style="height: 10em; width: 7em;">
@@ -289,13 +289,15 @@
                       </div>
                     </div>
 
-<!-- END GRID -->
-          </div>
 
-              </div>
-                </div>
+              </div>    <!--close class=Menschen-->
 
-                </div>
+            </div>  <!--close class=container-team-->
+
+        </div>
+
+
+      </div>
 
 
 
@@ -319,13 +321,12 @@
                               </li>
                               <li>
                                   <a> <u>Spenden über Paypal:</u></a> </br>
-
-                                    <input value="Spenden" onclick="popup=window.open('https://www.paypal.com/de/home')" type="button" />
-
+                                  <input value="Spenden" onclick="popup=window.open('https://www.paypal.com/de/home')" type="button" />
                               </li>
 
                           </ul>
                       </div>
+
                       <div class="col-md-4">
                         <ul>
                             <li class="bold">
@@ -339,15 +340,15 @@
                             </li>
                             <li>
                                 <a href="https://www.google.com/maps/place/Stadtwerke+Musterstadt/@50.9861834,6.8884554,17z/data=!3m1!4b1!4m5!3m4!1s0x47bf30055a956aeb:0x157e75aff56dd5fc!8m2!3d50.98618!4d6.8906441"><u>Link zu Google Maps</u> </a>
-
                             </li>
 
                         </ul>
                       </div>
+
                       <div class="col-md-4">
                           <ul>
                               <li class="bold">
-                                  <a href="#">Infos</a>
+                                  <a>Infos</a>
                               </li>
                               <li>
                                   <a><u>Öffnungszeiten:</u></a> </br>
@@ -355,13 +356,13 @@
                                       Samstag: 10:00-12:00 Uhr</br>
                                       Sonntag und an Feiertagen geschlossen!
 
-                                    </a>
+                                  </a>
                               </li>
                               <li>
                                   <a><u>Gassigeh und Kuschelzeiten :</u></a> </br>
                                   <a> Montag bis Freitag: 11:30-18:30 Uhr </br>
                                       Samstag: 10:00-18:00 Uhr</br>
-                                    </a>
+                                  </a>
                               </li>
 
                           </ul>
@@ -369,14 +370,15 @@
 
                   <div class="row">
                       <div class="col">
-
-                              © Tierheim BIOS
-
+                        © Tierheim BIOS
                       </div>
-                  </div>
+                </div>
               </div>
+
             </div>
+
           </footer>
+
         </body>
 
 
