--- a/src/Impressum.html
+++ b/src/Impressum.html
@@ -2,18 +2,10 @@
 
     <head>
 
-        <title> BIOS - Home</title>
+        <title> BIOS - Imperssum</title>
         <meta charset="utf-8">
-          <!-- Bootstrap -->
+
          <link rel="stylesheet" href="css/bootstrap.min.css">
-         <script src="js/jquery-1.10.2.js"></script>
-         <script src="js/jquery-3.3.1.slim.min.js"></script>
-         <script src="js/popper.min.js"></script>
-         <script src="javascript.js"></script>
-         <script src="js/bootstrap.min.js"></script>
-
-         <!--Stylesheet-->
-
          <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
          <link rel="stylesheet" href="css/impressum.css" />
 
@@ -36,57 +28,53 @@
               </button>
 
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                  <li class="nav-item">
-                    <a class="nav-link" href="home.html">Home <span class="sr-only">(current)</span></a>
-                  </li>
+                  <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                      <a class="nav-link" href="home.html">Home </a>
+                    </li>
                     <li class="nav-item">
                       <a class="nav-link" href="galerie.html">Galerie</a>
                     </li>
-                  <li class="nav-item">
+                    <li class="nav-item">
                     <a class="nav-link" href="formular.html">Kontakt</a>
-                  </li>
-                  <li class="nav-item active">
-                    <a class="nav-link" href="Impressum.html">Impressum</a>
+                    </li>
+                    <li class="nav-item active">
+                    <a class="nav-link" href="Impressum.html">Impressum<span class="sr-only">(current)</span></a>
                   </li>
 
                 </ul>
 
-              </div>
-            </nav>
-          </section>
+            </div>
+          </nav>
+      </section>
     </header>
 
     <main>
 
     <div class="row">
-      <div class="impressum col-md-10">
 
-            <h1>Impressum</h1>
-
-            <br />
-
+        <div class="impressum col-md-10">
+              <h1>Impressum</h1>
+                <br/>
 
 
-              <h2>Tierschutzverein Musterhausen und Umgebung e.V.</br>
+                <h2>
+                Tierschutzverein Musterhausen und Umgebung e.V.</br>
                 Musterstraße 1</br>
                 12345 Musterhausen</br>
-
                 </h2>
 
-                  <br />
+                <br />
 
-
-                <h2>Der Tierschutzverein Musterhausen und Umgebung e.V.</br>
+                <h2>
+                  Der Tierschutzverein Musterhausen und Umgebung e.V.</br>
                   ist vom Finanzamt Musterhausen unter der Steuernummer 12345/12345</br>
                   als gemeinnützig und besonders förderungswürdig anerkannt.</br>
                 </h2>
 
+                <br/>
 
-
-                <br />
-
-                  <h3>Vertreten durch</h3>
+                <h3>Vertreten durch</h3>
 
                 <h4>
                   Vorstandsvorsitzender – Max Mustermann </br>
@@ -95,120 +83,72 @@
 
                   Schriftführerin: Sabine Schreiber</br>
                   Vorstandsmitglied: Lischen Müller</br>
-
                 </h4>
 
-
-                <br />
-                    <h3>Kontakt</br>  </h3>
-                    <h4>
+                  <br/>
+                  <h3>Kontakt</h3>
+                  <h4>
                       Telefon: +49 (0)1234/56789</br>
                       Fax: +49 (0)1234/567899</br>
                       E-Mail: tierheim.bios@web.de</br>
-                    </h4>
+                  </h4>
+                  <br />
 
 
+                  <h3>Registereintrag</h3>
+                  <h4>
+                    Sitz des Vereins: Musterhausen</br>
+                    Registergericht: Amtsgericht Musterhausen</br>
+                    Vereinsregisternummer: VR 123 456</br>
+                  </h4>
+                  <br/>
 
-                    <br />
-
-
-                      <h3>Registereintrag</br></h3>
-                      <h4>
-                        Sitz des Vereins: Musterhausen</br>
-                        Registergericht: Amtsgericht Musterhausen</br>
-                        Vereinsregisternummer: VR 123 456</br>
-
-
-                      </h4>
-
-
-                      <br />
-
-
-
-
-
-                          <h3>Unsere Bankverbindung </br></h3>
-                            <h4>
-                            Tierschutzverein Musterhausen</br>
-                            Musterbank Musterhausen</br>
-                          IBAN DE11 2222 3333 4444 5555 66</br>
-                          </h4>
-                      </div>
+                  <h3>Unsere Bankverbindung </h3>
+                  <h4>
+                  Tierschutzverein Musterhausen</br>
+                  Musterbank Musterhausen</br>
+                  IBAN DE11 2222 3333 4444 5555 66</br>
+                  </h4>
+      </div>
 
 
 
 
-                      <div class="sidebar col-md-2">
+          <div class="sidebar col-md-2">
 
-                        <div class="spendentext">
+                  <div class="spendentext">
+                      Unsere Tiere brauchen dich!</br>
+                  </div>
+                      <h4> </br> Spende via  Paypal und direkt an unsere Tiere!</h4>
 
-                          Unsere Tiere brauchen dich!</br>
-
-                        </div>
-                        <h4> </br> Spende via  Paypal und direkt an unsere Tiere!</h4>
-
-                        <a href="https://www.paypal.com/de/home">
+                      <a href="https://www.paypal.com/de/home">
                         <img id="paypal" src="Bilder/logo_paypal.jpg" alt="paypal" />
                       </a>
                       </br>
                       </br>
 
 
-                      <div class="jobtext">
+                  <div class="jobtext">
 
                       </br>
                         Du hast Interesse an einem Job oder einer Ausbildung? </br>
                         Wir freuen uns über deine Online-Bewerbung an <u>tierheim.bios@web.de</u>
                       </br>
-                    </br>
-                      </div>
+                      </br>
+                  </div>
 
-                      <div class="facebook">
+                  <div class="facebook">
+                        <div class="fb-text">
+                                Folge uns auch auf Facebook, damit du keine News verpasst!
+                                </br>
+                        </div>
 
-
-                               <div class="Facebook">
-
-                                           <div class="fb-text">
-                                                  Folge uns auch auf Facebook, damit du keine News verpasst!
-                                                </br>
-                                           </div>
-
-                                            <a href="https://de-de.facebook.com">
-                                            <img id="facebook" src="Bilder/Facebook.png" alt="Facebook-Link"/>
-
-                                            </a>
-
-                                    </div>
-
-                      </div>
-
-
-
-
-
-
-
-
-
-                      </div>
-
-
-
+                              <a href="https://de-de.facebook.com">
+                                  <img id="facebook" src="Bilder/Facebook.png" alt="Facebook-Link"/>
+                              </a>
                     </div>
-
-
-
-
-
-        </div>
-
-
-
-
-
-
-
+                  </div>
+                </div>
 
     </main>
 
@@ -216,27 +156,28 @@
       <hr/>
               <div class="container">
                   <div class="row">
+
                       <div class="col-md-4">
                           <ul>
-                              <li class="bold">
+                                <li class="bold">
                                   <a>Spenden</a>
-                              </li>
-                              <li>
+                                </li>
+                                <li>
                                   <a> <u>Spendenkonto:</u></a>
-                              </li>
-                              <li>
+                                </li>
+                                <li>
                                   <a> Musterbank Musterhausen </a></br>
                                   <a> IBAN DE11 2222 3333 4444 5555 66 </a>
-                              </li>
-                              <li>
+                                </li>
+                                <li>
                                   <a> <u>Spenden über Paypal:</u></a> </br>
-
-                                    <input value="Spenden" onclick="popup=window.open('https://www.paypal.com/de/home')" type="button" />
-
-                              </li>
+                                  <input value="Spenden" onclick="popup=window.open('https://www.paypal.com/de/home')" type="button" />
+                                </li>
 
                           </ul>
                       </div>
+
+
                       <div class="col-md-4">
                         <ul>
                             <li class="bold">
@@ -250,15 +191,15 @@
                             </li>
                             <li>
                                 <a href="https://www.google.com/maps/place/Stadtwerke+Musterstadt/@50.9861834,6.8884554,17z/data=!3m1!4b1!4m5!3m4!1s0x47bf30055a956aeb:0x157e75aff56dd5fc!8m2!3d50.98618!4d6.8906441"><u>Link zu Google Maps</u> </a>
-
                             </li>
-
                         </ul>
                       </div>
+
+
                       <div class="col-md-4">
                           <ul>
                               <li class="bold">
-                                  <a href="#">Infos</a>
+                                  <a>Infos</a>
                               </li>
                               <li>
                                   <a><u>Öffnungszeiten:</u></a> </br>
@@ -277,6 +218,7 @@
 
                           </ul>
                       </div>
+
 
                   <div class="row">
                       <div class="col">
