--- a/src/galerie.html
+++ b/src/galerie.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
 
+    <!-- Schriftart von Google Fonts eingebunden-->
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
 
     <script src="js/jquery-1.11.1.min.js"></script>
@@ -56,9 +57,13 @@
 
         <div class="container">
             <div class="row">
-                <div class="gallery col-lg-12 col-md-12 col-sm-12 col-xs-12">
+
+                <!-- Titel mit Hintergrundfarbe über die Seitenbreite -->
+                <div class="titel col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <h1 class="galerieTitel">Galerie</h1>
                 </div>
+
+                <!-- Textblock über die komplette Seitenbreite -->
 
                 <div class="textBlock col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
@@ -72,38 +77,48 @@
 
                 </div>
 
+                <!-- Button mit Filterfunktion, Alle vorgewählt, data-filter= Filter der Galeriebilder -->
                 <div class="ButtonBlock">
-                    <button class="btn btn-default filter-button filter-button-active" data-filter="all">Alle</button>
-                    <button class="btn btn-default filter-button" data-filter="hunde">Hunde</button>
-                    <button class="btn btn-default filter-button" data-filter="katzen">Katzen</button>
-                    <button class="btn btn-default filter-button" data-filter="nagetiere">Nagetiere</button>
-                    <button class="btn btn-default filter-button" data-filter="ziegen">Ziegen</button>
+                    <button class="btn filter-button filter-button-active" data-filter="all">Alle</button>
+                    <button class="btn filter-button" data-filter="hunde">Hunde</button>
+                    <button class="btn filter-button" data-filter="katzen">Katzen</button>
+                    <button class="btn filter-button" data-filter="nagetiere">Nagetiere</button>
+                    <button class="btn filter-button" data-filter="ziegen">Ziegen</button>
 
                 </div>
                 <br>
+
+                 <!-- Platzhalter zwischen ButtonBlock und Galeriebeginn -->
                 <div class="platzhalter col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
                 </div>
 
+                <!-- Beginn des ersten Bilds mit einem hinterlegten Button für das Popup-->
                 <div class="galerieFeld col-lg-4 col-md-6 col-sm-6 col-xs-6 filter hunde">
+                     <!-- data-toggle für das öffnen des pop ups, data-target zur zweisung mit dem fenster-->
                     <button type="button" class="btn" data-toggle="modal" data-target="#Modal1">
-                        <img src="Bilder/hund1.png" class="img-responsive" alt="Buster" title="Buster - klicken für mehr Infos" />
+                        <!-- Beginn des ersten Bilds mit einem hinterlegten Button für das Popup-->
+                        <img src="Bilder/hund1.png" alt="Buster" title="Buster - klicken für mehr Infos" />
                     </button>
                 </div>
 
-                <!-- Modal -->
+                <!-- pop up fenster verknüpft über die id Modal1-->
                 <div class="modal fade" id="Modal1" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header">
+                                <!-- Überschrift im pop up-->
                                 <h5 class="modal-title" id="ModalLabel">Buster</h5>
+                                <!-- Button fr das schließen kreuz oben rechts am fenster-->
                                 <button type="button" class="close" data-dismiss="modal" aria-label="Schließen">
                                     <span aria-hidden="true">&times;</span>
                                 </button>
                             </div>
+                            <!-- Haupttext des Pop up fensters-->
                             <div class="modal-body">
                                 Mitte August erhielten wir einen Anruf, dass ein 9 jähriger Hund wegen Umzug abgegeben werden sollte. Wir sagten seine Aufnahme zu und so brachte man ihn uns am 17.08.18. Bei Aufnahme der Daten stellte sich allerdings heraus, dass der Rüde, den man seit Welpenalter hatte, nicht 9 sondern 12 Jahre alt ist. Wenn nun einer glaubt die Menschen, die Buster abgaben wären geknickt oder gar traurig gewesen, der täuscht sich. Es herrschte eine ganz saloppe Atmosphäre und verabschiedete sich mit den Worten: "Dann mache es mal gut, Buster!"
                             </div>
                             <div class="modal-footer">
+                                <!-- schließen button im fenster-->
                                 <button type="button" class="btn" data-dismiss="modal">Schließen</button>
                             </div>
                         </div>
@@ -112,7 +127,7 @@
 
                 <div class="galerieFeld col-lg-4 col-md-6 col-sm-6 col-xs-6 filter katzen">
                     <button type="button" class="btn" data-toggle="modal" data-target="#Modal2">
-                        <img src="Bilder/katze1.png" class="img-responsive" alt="Spencer" title="Spencer - klicken für mehr Infos" />
+                        <img src="Bilder/katze1.png" alt="Spencer" title="Spencer - klicken für mehr Infos" />
                     </button>
                 </div>
 
@@ -138,7 +153,7 @@
 
                 <div class="galerieFeld col-lg-4 col-md-6 col-sm-6 col-xs-6 filter hunde">
                     <button type="button" class="btn" data-toggle="modal" data-target="#Modal3">
-                        <img src="Bilder/hund2.png" class="img-responsive" alt="Berti" title="Berti - klicken für mehr Infos" />
+                        <img src="Bilder/hund2.png" alt="Berti" title="Berti - klicken für mehr Infos" />
                     </button>
                 </div>
 
@@ -165,7 +180,7 @@
 
                 <div class="galerieFeld col-lg-4 col-md-6 col-sm-6 col-xs-6 filter ziegen">
                     <button type="button" class="btn" data-toggle="modal" data-target="#Modal4">
-                        <img src="Bilder/ziege1.png" class="img-responsive" alt="BIOS" title="BIOS - klicken für mehr Infos" />
+                        <img src="Bilder/ziege1.png" alt="BIOS" title="BIOS - klicken für mehr Infos" />
                     </button>
                 </div>
                 <!-- Modal -->
@@ -191,7 +206,7 @@
 
                 <div class="galerieFeld col-lg-4 col-md-6 col-sm-6 col-xs-6 filter nagetiere">
                     <button type="button" class="btn" data-toggle="modal" data-target="#Modal5">
-                        <img src="Bilder/nagetier1.png" class="img-responsive" alt="Quintus" title="Quintus - klicken für mehr Infos" />
+                        <img src="Bilder/nagetier1.png" alt="Quintus" title="Quintus - klicken für mehr Infos" />
                     </button>
                 </div>
 
@@ -217,7 +232,7 @@
 
                 <div class="galerieFeld col-lg-4 col-md-6 col-sm-6 col-xs-6 filter ziegen">
                     <button type="button" class="btn" data-toggle="modal" data-target="#Modal6">
-                        <img src="Bilder/ziege2.png" class="img-responsive" alt="Simone" title="Simone - klicken für mehr Infos" />
+                        <img src="Bilder/ziege2.png" alt="Simone" title="Simone - klicken für mehr Infos" />
                     </button>
                 </div>
 
@@ -243,7 +258,7 @@
 
                 <div class="galerieFeld col-lg-4 col-md-6 col-sm-6 col-xs-6 filter nagetiere">
                     <button type="button" class="btn" data-toggle="modal" data-target="#Modal7">
-                        <img src="Bilder/nagetier2.png" class="img-responsive" alt="Ludwig" title="Ludwig - klicken für mehr Infos" />
+                        <img src="Bilder/nagetier2.png" alt="Ludwig" title="Ludwig - klicken für mehr Infos" />
                     </button>
                 </div>
 
@@ -269,7 +284,7 @@
 
                 <div class="galerieFeld col-lg-4 col-md-6 col-sm-6 col-xs-6 filter ziegen">
                     <button type="button" class="btn" data-toggle="modal" data-target="#Modal8">
-                        <img src="Bilder/ziege3.png" class="img-responsive" alt="Ritschi" title="Ritschi - klicken für mehr Infos" />
+                        <img src="Bilder/ziege3.png" alt="Ritschi" title="Ritschi - klicken für mehr Infos" />
                     </button>
                 </div>
                 <!-- Modal -->
@@ -294,7 +309,7 @@
 
                 <div class="galerieFeld col-lg-4 col-md-6 col-sm-6 col-xs-6 filter hunde">
                     <button type="button" class="btn" data-toggle="modal" data-target="#Modal9">
-                        <img src="Bilder/hund3.png" class="img-responsive" alt="Hagrid" title="Hagrid - klicken für mehr Infos" />
+                        <img src="Bilder/hund3.png" alt="Hagrid" title="Hagrid - klicken für mehr Infos" />
                     </button>
                 </div>
 
@@ -320,7 +335,7 @@
 
                 <div class="galerieFeld col-lg-4 col-md-6 col-sm-6 col-xs-6 filter nagetiere">
                     <button type="button" class="btn" data-toggle="modal" data-target="#Modal10">
-                        <img src="Bilder/nagetier3.png" class="img-responsive" alt="Freddi" title="Freddi - klicken für mehr Infos" />
+                        <img src="Bilder/nagetier3.png" alt="Freddi" title="Freddi - klicken für mehr Infos" />
                     </button>
                 </div>
 
@@ -346,7 +361,7 @@
 
                 <div class="galerieFeld col-lg-4 col-md-6 col-sm-6 col-xs-6 filter katzen">
                     <button type="button" class="btn" data-toggle="modal" data-target="#Modal11">
-                        <img src="Bilder/katze2.png" class="img-responsive" alt="Tolkien" title="Tolkien - klicken für mehr Infos" />
+                        <img src="Bilder/katze2.png" alt="Tolkien" title="Tolkien - klicken für mehr Infos" />
                     </button>
                 </div>
 
@@ -370,7 +385,7 @@
                     </div>
                 </div>
 
-                <div class="gallery col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <div class="titel col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <p class="galerieTitel"> Wir freuen uns auf Ihre Nachricht!</p>
                 </div>
             </div>
