--- a/src/form.html
+++ b/src/form.html
@@ -12,15 +12,47 @@
         <script src="bootstrap/js/bootstrap.min.js"></script>
 
         <!-- Eigene Stylesheets -->
-        <link rel="stylesheet" href="style.css" />
-        <link rel="icon" href="img/logo.png" />
+        <link rel="icon" href="Bilder/index.png" />
         <link rel="stylesheet" href="form.css" />
+        <link rel="stylesheet" href="style.css" />
 
         <!-- JS einbinden -->
         <script src="form.js"></script>
     </head>
     <body>
+
         <!-- Navigationsleiste -->
+        <section id="navbar">
+
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand" href="#">
+                    <img src="Bilder/logo.png" id="logo" alt="ziege" />
+                </a>
+
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="home.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="galerie.html">Galerie</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="form.html">Kontakt<span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="Impressum.html">Impressum</a>
+                        </li>
+
+                    </ul>
+
+                </div>
+            </nav>
+        </section>
 
         <!-- Seiteninhalt -->
         <h1>Kontaktformular</h1>
@@ -71,8 +103,91 @@
             <!-- Button zum Absenden -->
             <input type="submit" value="Nachricht senden" />
 
-            <!-- Hier wird das Ergebnis der Prüfung angezeigt -->
+            <!-- Hier wird das Ergebnis der Prüfung angezeigt (ist nicht aktiv, da es eine Dankesseite gibt)-->
             <div id="result"></div>
         </form>
+
+        <!-- Footer -->
+        <footer>
+
+            <!-- Trennlinie -->
+            <hr/>
+            <div class="container">
+                <div class="row">
+
+                    <!-- LINKS Spenden -->
+                    <div class="col-md-4">
+                        <ul>
+                            <li class="bold">
+                                <a>Spenden</a>
+                            </li>
+
+                            <li>
+                                <a> <u>Spendenkonto:</u></a>
+                            </li>
+
+                            <li>
+                                <a> Musterbank Musterhausen </a></br>
+                                <a> IBAN DE11 2222 3333 4444 5555 66 </a>
+                            </li>
+
+                            <li>
+                                <a> <u>Spenden über Paypal:</u></a> </br>
+                                <input value="Spenden" onclick="popup=window.open('https://www.paypal.com/de/home')" type="button" />
+                            </li>
+                        </ul>
+                    </div>
+
+                    <!-- MITTE Anfahrt -->
+                    <div class="col-md-4">
+                        <ul>
+                            <li class="bold">
+                                <a>Anfahrt</a>
+                            </li>
+
+                            <li>
+                                <a> Tierheim BIOS Musterhausen </a> </br>
+                                <a> Musterstraße 1 </a></br>
+                                <a> 12345 Musterstadt </a>
+                            </li>
+                            <li>
+                                <a href="https://www.google.com/maps/place/Stadtwerke+Musterstadt/@50.9861834,6.8884554,17z/data=!3m1!4b1!4m5!3m4!1s0x47bf30055a956aeb:0x157e75aff56dd5fc!8m2!3d50.98618!4d6.8906441"><u>Link zu Google Maps</u> </a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <!-- RECHTS Infos -->
+                    <div class="col-md-4">
+                        <ul>
+                            <li class="bold">
+                                <a>Infos</a>
+                            </li>
+
+                            <li>
+                                <a><u>Öffnungszeiten:</u></a> </br>
+                                <a> Montag bis Freitag: 13:30-17:30 Uhr </br>
+                                    Samstag: 10:00-12:00 Uhr</br>
+                                    Sonntag und an Feiertagen geschlossen!
+                                </a>
+                            </li>
+
+                            <li>
+                                <a><u>Gassigeh- und Kuschelzeiten:</u></a> </br>
+                                <a> Montag bis Freitag: 11:30-18:30 Uhr </br>
+                                    Samstag: 10:00-18:00 Uhr</br>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <!-- UNTEN Copyright -->
+                    <div class="row">
+                        <div class="col">
+                            © Tierheim BIOS
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
