spende button und media querys

--- a/src/home.html
+++ b/src/home.html
@@ -6,14 +6,16 @@
         <meta charset="utf-8">
           <!-- Bootstrap -->
          <link rel="stylesheet" href="css/bootstrap.min.css">
-         <script src="js/jquery-1.10.2.js"></script>
          <script src="js/jquery-3.3.1.slim.min.js"></script>
+          <script src="js/jquery-1.11.1.min.js"></script>
          <script src="javascript.js"></script>
          <script src="js/bootstrap.min.js"></script>
 
          <!--Stylesheet-->
          <link rel="stylesheet" href="css/style.css" />
          <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
+
+
 
     </head>
 
@@ -25,8 +27,8 @@
         <section id="navbar">
 
               <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <a class="navbar-brand" href="#">
-                        <img src="Bilder/logo.jpg" id="logo" alt="ziege" />
+                    <a class="navbar-brand">
+                        <img src="Bilder/logo.png" id="logo" alt="ziege" />
                     </a>
 
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -194,7 +196,7 @@
                       <!--Leiter-->
                       <div class="column Leiter">
                         <div class="content">
-                          <img src="Bilder/Leiterin.jpg" alt="Leiterin1" style="height:10em; width: 7em;">
+                          <img src="Bilder/Leiterin.jpg" alt="Leiterin1" style="width:40%"/>
                           <hr/>
                          <h4>Maxine Musterfrau</h4>
                          <p>Unsere Tierheimleitung mit Herz und Seele. </p>
@@ -204,7 +206,7 @@
 
                      <div class="column Leiter">
                        <div class="content">
-                         <img src="Bilder/Leiterin2.jpg" alt="Leiterin2" style="height:10em; width: 7em;">
+                         <img src="Bilder/Leiterin2.jpg" alt="Leiterin2" style="width:40%"/>
                           <hr/>
                          <h4>Carla Columna</h4>
                          <p>Wenn unsere Maxine mal nicht vor Ort sein sollte oder Unterstützung benötigt ist Carla stehts zur stelle.</p>
@@ -214,7 +216,7 @@
                      <!--Mitarbeiter-->
                  <div class="column Mitarbeiter">
                    <div class="content">
-                     <img src="Bilder/Mitarbeiter.jpg" alt="Mitarbeter1" style="height:10em; width: 7em;">
+                     <img src="Bilder/Mitarbeiter.jpg" alt="Mitarbeter1" style="width:40%"/>
                      <hr/>
                      <h4>Michael Müller</h4>
                       <p>Wir sind sehr stolz auf unseren langjährigsten Mitarbeiter Michael!</p>
@@ -223,7 +225,7 @@
 
                   <div class="column Mitarbeiter">
                     <div class="content">
-                      <img src="Bilder/Mitarbeiter2.png" alt="Mitarbeiter2" style="height:10em; width: 7em;">
+                      <img src="Bilder/Mitarbeiter2.png" alt="Mitarbeiter2" style="width:40%">
                       <hr/>
                       <h4>Zeus Ziege</h4>
                        <p>Zeus ist das neueste Mitglied unseres Teams und unser Ziergenflüsterer.</p>
@@ -232,7 +234,7 @@
 
                    <div class="column Mitarbeiter">
                      <div class="content">
-                       <img src="Bilder/Mitarbeiter3.png" alt="Mitarbeiter3" style="height:10em; width: 7em;">
+                       <img src="Bilder/Mitarbeiter3.png" alt="Mitarbeiter3"style="width:40%"/>
                        <hr/>
                        <h4>Tim Titanic</h4>
                         <p>Tim ist unser Katzen und Hundeflüsterer.</p>
@@ -244,7 +246,7 @@
                       <!--Azubi-->
                     <div class="column Azubi">
                       <div class="content">
-                        <img src="Bilder/Azubi.jpg" alt="Azubi1" style="height: 10em; width: 7em;">
+                        <img src="Bilder/Azubi.jpg" alt="Azubi1" style="width:40%">
                         <hr/>
                         <h4>Titus Tier</h4>
                         <p>Unser Azubi Titus ist schon im dritten Lehrjahr. </p>
@@ -253,7 +255,7 @@
 
                     <div class="column Azubi">
                       <div class="content">
-                        <img src="Bilder/Azubi2.jpg" alt="Azubi2" style="height: 10em; width: 7em;">
+                        <img src="Bilder/Azubi2.jpg" alt="Azubi2" style="width:40%"/>
                         <hr/>
                         <h4>Herbert Hund</h4>
                         <p>Herbert hat gerade seine Ausbildung als Tierpfleger begonnen. </p>
@@ -263,7 +265,7 @@
                       <!--Verwaltung-->
                     <div class="column Verwaltung">
                       <div class="content">
-                        <img src="Bilder/Verwaltung.jpg" alt="Verwaltung1" style="height: 10em; width: 7em;">
+                        <img src="Bilder/Verwaltung.jpg" alt="Verwaltung1" style="width:40%"/>
                         <hr/>
                         <h4>Bert Bilanz</h4>
                         <p>Bert managed unser Büro. </p>
@@ -272,7 +274,7 @@
 
                     <div class="column Verwaltung">
                       <div class="content">
-                        <img src="Bilder/Verwaltung2.jpg" alt="Verwaltung2" style="height: 10em; width: 7em;">
+                        <img src="Bilder/Verwaltung2.jpg" alt="Verwaltung2" style="width:40%"/>
                         <hr/>
                         <h4>Claus Computer</h4>
                         <p>Claus ist unser IT-Spezialist. </p>
@@ -282,7 +284,7 @@
                       <!--Aushilfen-->
                     <div class="column Aushilfe">
                       <div class="content">
-                        <img src="Bilder/Aushilfe.png" alt="Aushilfe" style="height: 10em; width: 7em;">
+                        <img src="Bilder/Aushilfe.png" alt="Aushilfe" style="width:40%"/>
                         <hr/>
                         <h4>Hans Helfer</h4>
                         <p>Hans ist immer zur Stelle, wenn wir Unterstützung gebrauchen können. </p>
@@ -294,10 +296,48 @@
 
             </div>  <!--close class=container-team-->
 
-        </div>
+          </div><!--close row=galerie-->
+
+          <div class="container">
+              <div id="carouselContent" class="carousel slide" data-ride="carousel">
+                  <div class="carousel-inner" role="listbox">
+                      <div class="carousel-item active text-center p-4">
+                           <p>"Unser Bello hat unsere Familie so bereichert!! Vielen Dank BIOS!!"</p>
+                           <p><font style="color:darkgreen; font-size:14px; text-transform: uppercase; font-weight: bold; font-style:italic">Kordula Grün </font></p>
+                      </div>
 
 
-      </div>
+                      <div class="carousel-item text-center p-4">
+
+                            <p>"Vielen Dank für die großartige Zusammenarbeit!! Ihr seid echt klasse!"</p>
+                           <p><font style="color:darkgreen; font-size:14px; text-transform: uppercase; font-weight: bold; font-style:italic">Mathias Muster, CEO xyz GmbH</font></p>
+                      </div>
+
+                      <div class="carousel-item text-center p-4">
+
+                            <p>"Eure Kaninchen schmecken echt super!! Dickes Lob. "</p>
+                           <p><font style="color:darkgreen; font-size:14px; text-transform: uppercase; font-weight: bold; font-style:italic">Anika Schmidt</font></p>
+                      </div>
+
+
+
+                  </div>
+                  <a class="carousel-control-prev" href="#carouselContent" role="button" data-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                  </a>
+                  <a class="carousel-control-next" href="#carouselContent" role="button" data-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                  </a>
+              </div>
+          </div> <!--close quote caorusel-->
+
+
+    </div> <!--row außenrumcontainer close-->
+
+
+  </div>  <!--außenrumcontainer close-->
 
 
 
@@ -321,7 +361,7 @@
                               </li>
                               <li>
                                   <a> <u>Spenden über Paypal:</u></a> </br>
-                                  <input value="Spenden" onclick="popup=window.open('https://www.paypal.com/de/home')" type="button" />
+                                  <input value="Spenden" onclick="popup=window.open('https://www.paypal.com/de/home')" type="button" id="donate"/>
                               </li>
 
                           </ul>
