Neues Icon verbaut

--- a/src/galerie.html
+++ b/src/galerie.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/style.css" />
 
     <title>BIOS - eine Zweite Chance </title>
-    <link rel="icon" href="Bilder/logo.png"/>
+    <link rel="icon" href="Bilder/logo_ohne_bios.png"/>
 </head>
 <body>
 
